[package]
name = "num2ordinal"
version = "0.1.1"
authors = [
    "Levi Lim <shiueo.csh@gmail.com>",
]
edition = "2021"
description = "A simple Rust crate for converting integers to ordinal representations, including support for alphabetic and Roman numeral formats."
license = "MIT"
repository = "https://github.com/shiueo/num2ordinal"
readme = "README.md"
documentation = "https://docs.rs/num2ordinal"

[package.metadata.docs.rs]

[dependencies]
once_cell = "1.20.2"
